Добавлены пути для некоторых хэндлеров
